--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.2",
+  "version": "0.0.3",
   "name": "mongodb-restore-cli",
   "description": "mongodb-restore cli",
   "keywords": [
@@ -35,7 +35,7 @@
     "mongodb-restore": "1.x"
   },
   "engines": {
-    "node": "^0.10"
+    "node": ">=0.10"
   },
   "scripts": {
     "prepublish": "npm prune"
