--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
     "mongodb-restore": "./bin/cli.js"
   },
   "dependencies": {
-    "cli": "0.6.5"
-  },
-  "peerDependencies": {
+    "cli": "0.6.5",
     "mongodb-restore": "1.x"
-  },
+  }
   "engines": {
     "node": ">=0.10"
   },
