--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "cli": "0.11.0",
     "mongodb-restore": "1.x"
   },
+  "devDependencies": {
+    "mongodb-backup": "1.x"
+  },
   "engines": {
     "node": ">=0.10"
   },
