--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.2.1",
+  "version": "0.2.2",
   "name": "mongodb-restore-cli",
   "description": "mongodb-restore cli",
   "keywords": [
@@ -8,7 +8,7 @@
     "cli"
   ],
   "preferGlobal": true,
-  "homepage": "http://supergiovane.tk/#/mongodb-restore-cli",
+  "homepage": "https://github.com/hex7c0/mongodb-restore-cli",
   "author": {
     "name": "hex7c0",
     "email": "hex7c0@gmail.com",
